# Graffiti

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  build_msvc.py  main.cpp  run.py
apps/: CMakeLists.txt  main.cpp
assets/meshes/: cube.mtl
examples/: light.cpp  main.cpp  main1.cpp  main_3d.cpp  main_3d_with_camera.cpp  model.cpp
include/: Camera.hpp  Core.h  Core.hpp  Mesh.hpp  Model.hpp  Shader.hpp  ShaderProgram.h  TestCube.h  TestTriangle.h  Texture.hpp  Util.hpp  WaveFrontLoader.hpp  Window.hpp
include/core/: Core_Minimal.h  Shader.h  Texture.h  ViewportCamera.h
include/util/: FileManager.h  Util.h
scripts/: build_ninja.py
shaders/: 3d.frag  3d.vert  cube.fs  cube.vs  simple_trig.frag  simple_trig.vert  test.fs  test.vs
src/: Camera.cpp  Core.cpp  Mesh.cpp  Model.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  Util.cpp  WaveFrontLoader.cpp  Window.cpp  main.cpp
src/core/: Shader.cpp  Texture.cpp  ViewportCamera.cpp
src/util/: FileManager.cpp
